[package]
name = "kvs"
version = "0.1.0"
authors = ["Li <li@gmail.com>"]
description = "A key-value store"
edition = "2024"

[dependencies]
assert_cmd = "0.11.0"
clap = { version = "4.6.1", features = ["derive"] }
predicates = "1.0.0"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
