[package]
name = "kvs"
version = "0.1.0"
authors = ["thedevplus"]
description = "A log-structured key-value store implemented in Rust"
edition = "2024"
license = "MIT"
repository = "https://github.com/thedevplus/kvs-system"
homepage = "https://github.com/thedevplus"
keywords = ["key-value", "database", "storage", "log-structured"]
categories = ["database", "data-structures"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
log = { version = "0.4.32", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sled = "0.34.7"
stderrlog = "0.6.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.8.2"
predicates = "1.0.0"
rand = "0.10.1"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false
